--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fade-In Centered Example</title>
-    <link rel="stylesheet"   th:href="@{/css/style.css}"> <!-- External CSS File -->
+    <link rel="stylesheet"  href="css/style.css" th:href="@{/css/style.css}"> <!-- External CSS File -->
 
 </head>
 <body>
 <div class="fade-in">
     <div class="image-container">
-        <img src="/images/light-bulb-white.png" alt="Light Bulb">
+        <img src="images/light-bulb-white.png" alt="Light Bulb">
         <div class="inner-image">
             <div id="atom">
                 <div id="nucleus">
